:wastebasket: removed codes which were not needed and extra spaces fixed

--- a/src/App.css
+++ b/src/App.css
@@ -6,58 +6,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-
-@media (max-width: 640px) {
-  .swiper-button-next,
-  .swiper-button-prev {
-    --swiper-navigation-size: 22px !important; /* Reduce arrow size */
-  }
-
-  .swiper-button-next {
-    right: 5px !important; /* Bring arrow closer inside */
-  }
-
-  .swiper-button-prev {
-    left: 5px !important; /* Bring arrow closer inside */
-  }
-}
